src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Invalid/UnexpectedResourceValue/InvalidUnexpectedResourceValue.php
<?php

namespace Invalid\UnexpectedResourceValue;

use Claroline\CoreBundle\Library\Plugin\ClarolineExtension;

/**
 * Invalid because there's an unexpected value in its resource definition
 */
class InvalidUnexpectedResourceValue extends ClarolineExtension
{
}